[package]
name = "mealbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
dotenv = {version="0.15.0"}
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
scraper = "0.13.0"
chrono = "0.4"